<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PantryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    tools:context=".ui.pantry.PantryFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addToPantryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/colorTertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869" />

    <ListView
        android:id="@+id/pantryItems"
        android:layout_width="415dp"
        android:layout_height="456dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773">

    </ListView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="46dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextAddPantry"
            android:layout_width="159dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="(i.e. Butter)"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/quantityTxt"
            android:layout_width="35dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/unitTypesTxt"
            android:layout_width="97dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="Can"
            android:inputType="textPersonName" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>