<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_pantry"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/pantry" />

    <item
        android:id="@+id/navigation_cookbook"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/cook_book" />

</menu>